# LoreLeaf

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: book_analyzer.yml  epub.yml  rust.yml
crates/app_startup/: Cargo.toml
crates/app_startup/src/: lib.rs
crates/book_analyzer/: Cargo.toml
crates/book_analyzer/src/: lib.rs
crates/book_analyzer/tests/: read.rs
crates/book_analyzer/tests/data/: the_time_machine.epub  the_wonderful_wizard_of_oz.epub  the_wonderful_wizard_of_oz_v2_no_images.epub
crates/common/: Cargo.toml
crates/common/src/: buttons.rs  flex_container.rs  lib.rs  screens.rs  states.rs  utilities.rs
crates/common/src/buttons/: configuration.rs  mod.rs  navigation.rs  systems.rs
crates/epub/: Cargo.toml
crates/epub/data/: moby-dick.epub
crates/epub/src/: epub.rs  lib.rs  manifest.rs  metadata.rs  reader.rs  spine.rs  strings.rs  table_of_contents.rs
crates/epub/src/chapters/: chapter.rs  chapter_node.rs  mod.rs  structure.rs
crates/epub/src/table_of_contents/: mod.rs  table_of_contents.rs  table_of_contents_item.rs
crates/epub/test_data/toc/: toc.ncx
crates/reader/: Cargo.toml
crates/reader/src/: lib.rs  plugin.rs  toolbar.rs  toolbar_buttons.rs
crates/reader/src/bundles/: mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: book_listing.rs  buttons.rs  home.rs  lib.rs  library.rs  screens.rs  splash.rs  state.rs  text.rs
crates/ui/test_data/: trees.epub
src/: main.rs
