[package]
name = "lore-leaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = ["crates/app_startup", "crates/common", "crates/epub", "crates/library", "crates/ui"]

[dependencies]
app_startup = { version = "0.1.0", path = "crates/app_startup" }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
